# arene

./: CMakeLists.txt  README.md  arbitre.cpp  arbitre.h  joueur.h  joueur_alphabeta_.cpp  joueur_alphabeta_.h  main.cpp
objects/: jeu.h  joueur_brutal_.h  joueur_random.h
